fix: 調整 AvatarCropper、CreateServer、ServerSetting 和 UserSetting 組件的樣式，優化代碼結構，移除不必要的狀態管理

--- a/src/styles/popup.module.css
+++ b/src/styles/popup.module.css
@@ -477,30 +477,6 @@
   border-bottom: 1px solid #e0e0e4;
 }
 
-.display-top {
-  align-items: flex-start;
-}
-
-.display-bottom {
-  align-items: flex-end;
-}
-
-.display-left {
-  justify-content: flex-start;
-}
-
-.display-right {
-  justify-content: flex-end;
-}
-
-.space-between {
-  justify-content: space-between;
-}
-
-.space-around {
-  justify-content: space-around;
-}
-
 .sound-effect-preview {
   min-height: 17px;
   min-width: 17px;
